--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo 1 - HTML</title>
+    <title>AA2 - HTML</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet" type="text/css">
@@ -25,15 +25,10 @@
             <div class="contenedortexto">
                 <div class="texto">
                     <h1 class="nombre">Anthony Manuel Guevara Becerra</h1>
-                    <h2 class="profesión">Especialista en desarrollo web</h2>
+                    <h2 class="profesión">Especialista en Ciberseguridad</h2>
                 </div>
             </div>
         </div>
-        <nav>
-            <a href="#">Acerca de</a>
-            <a href="#">Trabajos</a>
-            <a href="#">Contactanos</a>
-        </nav>
     </header>
     <!-- Fin del header -->
     <!-- Inicia la sección principal -->
@@ -134,22 +129,22 @@
     <!-- Fin de la sección principal -->
     <!-- Inicia el footer -->
     <footer>
-        <div>
-            <h3>Contactanos</h3>
-            <form action="">
+        <div class="contáctanos">
+            <h3 class="título">Contáctanos</h3>
+            <form class="formulario">
                 <input type="text" placeholder="Nombres y apellidos" required>
                 <input type="email" placeholder="Correo" required>
                 <textarea placeholder="Mensaje"></textarea>
                 <input type="submit" value="Enviar">
             </form>
         </div>
-        <section>
-            <div>
-                <a href="#"><i></i></a>
-                <a href="#"><i></i></a>
-                <a href="#"><i></i></a>
-                <a href="#"><i></i></a>
-                <a href="#"><i></i></a>
+        <section class="redessociales">
+            <div class="contenedor">
+                <a class="facebook" href="https://www.facebook.com/anthony.guevarabecerra"><img src="img/facebook.png" alt="facebook"><i class="fa fa-facebook"></i></a>
+                <a class="instagram" href="https://www.instagram.com/"><img src="img/instagram.png" alt="Instagram"><i class="fa fa-instagram"></i></a>
+                <a class="youtube" href="https://www.youtube.com"><img src="img/youtube.png" alt="Youtube"><i class="fa fa-youtube"></i></a>
+                <a class="twitter" href="https://x.com/?lang=es"><img src="img/twitter.png" alt="Twitter"><i class="fa fa-twitter"></i></a>
+                <a class="github" href="https://github.com/Thony-GB"><img src="img/github.png" alt="Github"><i class="fa fa-github"></i></a>
             </div>
         </section>
     </footer>
